@@ -278,7 +278,7 @@ def modpath_from_file_with_callback(
     filename = os.path.expanduser(_path_from_filename(filename))
     paths_to_check = sys.path.copy()
     if path:
-        paths_to_check += path
+        paths_to_check = path + paths_to_check
     for pathname in itertools.chain(
         paths_to_check, map(_cache_normalize_path, paths_to_check)
     ):
