@@ -20,6 +20,7 @@ What's New in astroid 3.3.6?
 ============================
 Release date: TBA
 
+* Fix precedence of `path` arg in `modpath_from_file_with_callback` to be higher than `sys.path`
 
 
 What's New in astroid 3.3.5?
